examples/single-page-app/envoy.yml
node:
  id: FOO
  cluster: BAR

dynamic_resources:
  lds_config:
    resource_api_version: V3
    path_config_source:
      path: /var/lib/envoy/lds.yml

static_resources:
  listeners:
  - name: dev
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 10001
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          upgrade_configs:
          - upgrade_type: websocket
          http_filters:
          - name: envoy.filters.http.oauth2
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.oauth2.v3.OAuth2
              config:
                token_endpoint:
                  cluster: hub
                  uri: http://myhub:7000/authenticate
                  timeout: 3s
                default_expires_in: 600s
                authorization_endpoint: http://localhost:7000/authorize
                redirect_uri: "%REQ(x-forwarded-proto)%://%REQ(:authority)%/authorize"
                forward_bearer_token: true
                pass_through_matcher:
                  name: ":path"
                  string_match:
                    safe_regex:
                      regex: >-
                        ^\/(authorize.*|login|logout)$
                  invert_match: true
                redirect_path_matcher:
                  path:
                    prefix: /authorize
                signout_path:
                  path:
                    exact: /logout
                credentials:
                  client_id: "0123456789"
                  token_secret:
                    name: token
                    sds_config:
                      resource_api_version: V3
                      path_config_source:
                        path: /etc/envoy/secrets/myhub-token-secret.yml
                  hmac_secret:
                    name: hmac
                    sds_config:
                      resource_api_version: V3
                      path_config_source:
                        path: /etc/envoy/secrets/hmac-secret.yml
                auth_scopes:
                - user:email
          - name: envoy.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          codec_type: "AUTO"
          stat_prefix: ingress_http
          route_config:
            virtual_hosts:
            - name: web
              domains: ["*"]
              routes:
              - match:
                  prefix: "/other/"
                route:
                  regex_rewrite:
                    pattern:
                      regex: '^/other/(.*)'
                    substitution: '/\1'
                  cluster: other

              - match:
                  prefix: "/hub/"
                route:
                  host_rewrite_literal: api.myhub
                  regex_rewrite:
                    pattern:
                      regex: '^/hub/(.*)'
                    substitution: '/\1'
                  cluster: hub-api
              - match:
                  prefix: "/"
                route:
                  cluster: ui

  - name: production
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 10000
    access_log:
    - name: envoy.access_loggers.stdout
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StderrAccessLog
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          http_filters:
          - name: envoy.filters.http.oauth2
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.oauth2.v3.OAuth2
              config:
                token_endpoint:
                  cluster: hub
                  uri: http://myhub:7000/authenticate
                  timeout: 3s
                default_expires_in: 600s
                authorization_endpoint: http://localhost:7000/authorize
                redirect_uri: "%REQ(x-forwarded-proto)%://%REQ(:authority)%/authorize"
                forward_bearer_token: true
                pass_through_matcher:
                  name: ":path"
                  string_match:
                    safe_regex:
                      regex: >-
                        ^\/(authorize.*|login|logout)$
                  invert_match: true
                redirect_path_matcher:
                  path:
                    prefix: /authorize
                signout_path:
                  path:
                    exact: /logout
                credentials:
                  client_id: "0123456789"
                  token_secret:
                    name: token
                    sds_config:
                      resource_api_version: V3
                      path_config_source:
                        path: /etc/envoy/secrets/myhub-token-secret.yml
                  hmac_secret:
                    name: hmac
                    sds_config:
                      resource_api_version: V3
                      path_config_source:
                        path: /etc/envoy/secrets/hmac-secret.yml
                auth_scopes:
                - user:email
          - name: envoy.filters.http.compressor
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.compressor.v3.Compressor
              response_direction_config:
                common_config:
                  min_content_length: 100
                disable_on_etag_header: true
              compressor_library:
                name: text_optimized
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.compression.gzip.compressor.v3.Gzip
                  memory_level: 3
                  window_bits: 10
          - name: envoy.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          codec_type: "AUTO"
          stat_prefix: ingress_http
          route_config:
            virtual_hosts:
            - name: web
              domains: ["*"]
              routes:
              - match:
                  prefix: "/other/"
                route:
                  regex_rewrite:
                    pattern:
                      regex: '^/other/(.*)'
                    substitution: '/\1'
                  cluster: other

              - match:
                  prefix: "/hub/"
                route:
                  host_rewrite_literal: api.myhub
                  regex_rewrite:
                    pattern:
                      regex: '^/hub/(.*)'
                    substitution: '/\1'
                  cluster: hub-api
              - match:
                  prefix: "/"
                route:
                  cluster: loopback
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          common_tls_context:
            tls_certificates:
            # The following self-signed certificate pair is generated using:
            # $ openssl req -x509 -newkey rsa:2048 -keyout a/front-proxy-key.pem -out  a/front-proxy-crt.pem -days 3650 -nodes -subj '/CN=front-envoy'
            #
            # Instead of feeding it as an inline_string, certificate pair can also be fed to Envoy
            # via filename. Reference: https://envoyproxy.io/docs/envoy/latest/api-v3/config/core/v3/base.proto#config-core-v3-datasource.
            #
            # Or in a dynamic configuration scenario, certificate pair can be fetched remotely via
            # Secret Discovery Service (SDS). Reference: https://envoyproxy.io/docs/envoy/latest/configuration/security/secret.
            - certificate_chain:
                inline_string: |
                  -----BEGIN CERTIFICATE-----
                  MIICqDCCAZACCQCquzpHNpqBcDANBgkqhkiG9w0BAQsFADAWMRQwEgYDVQQDDAtm
[...]
                  m+/R4XnmL4cKQ+5Z
                  -----END CERTIFICATE-----
              private_key:
                inline_string: |
                  -----BEGIN PRIVATE KEY-----
                  MIIEvQIBADANBgkqhkiG9w0BAQEFAASCBKcwggSjAgEAAoIBAQC2GdiSpVAFf5aD
[...]
                  q5sGxGrC1RECGB5Zwx2S2ZY=
                  -----END PRIVATE KEY-----

  clusters:

  # UI development server
  #  tail the logs by running:
  #     `docker compose logs ui -f`
  - name: ui
    type: LOGICAL_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: ui
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: ui
                port_value: 3000

  # UI static routes (production)
  #  build app and create listener/routes by running:
  #     `docker compose run ui build.sh`
  - name: loopback
    type: STATIC
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: loopback
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 10002

  - name: hub
    type: LOGICAL_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: hub
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: myhub
                port_value: 7000

  - name: hub-api
    type: LOGICAL_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: hub-api
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: myhub-api
                port_value: 7000

  - name: other
    type: LOGICAL_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: other
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: other
                port_value: 7000
